--- a/.github/workflows/test_tests.yaml
+++ b/.github/workflows/test_tests.yaml
@@ -3,11 +3,13 @@
 name: Compiler Test Suite CI 
 
 on:
-  pull_request:
-    branches: [ "main" ]
+  #pull_request:
+  #  branches: [ "main" ]
+  # just trigger manually while experimenting with workflows
+  workflow_dispatch:
 
 jobs:
-  build:
+  test:
 
     strategy:
       fail-fast: false
@@ -25,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install mypy pylint
-    - name: Lint with mypy and flake8
+    - name: Lint with mypy and pylint
       run: |
         # stop the build if there are errors
         pylint -E tests
