--- a/.github/workflows/test_tests.yaml
+++ b/.github/workflows/test_tests.yaml
@@ -35,8 +35,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9"] #["3.8", "3.9", "3.10", "3.11"]
-        os: [ubuntu-latest] #[ubuntu-latest, macos-latest]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     needs: [build-final-nqcc, build-partial-nqcc]
     steps:
