--- a/.github/workflows/test_tests.yaml
+++ b/.github/workflows/test_tests.yaml
@@ -32,7 +32,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest] #, macos-latest]
-    uses: nlsandler/nqcc-ref-impl/.github/workflows/build.yaml@main # TODO this should be main eventually
+    uses: nlsandler/nqcc-ref-impl/.github/workflows/build.yaml@main
     with:
       chapter: 19
       os: ${{ matrix.os }}
