--- a/.github/workflows/test_tests.yaml
+++ b/.github/workflows/test_tests.yaml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest] #, macos-latest]
+        os: [ubuntu-latest, macos-latest]
     uses: nlsandler/nqcc2/.github/workflows/build.yaml@main
     with:
       chapter: 20
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest] #, macos-latest]
+        os: [ubuntu-latest, macos-latest]
     uses: nlsandler/nqcc2/.github/workflows/build.yaml@main
     with:
       chapter: 19
@@ -38,7 +38,7 @@ jobs:
       fail-fast: true
       matrix:
         python-version: ["3.8", "3.11"] #, "3.9", "3.10", "3.11"]
-        os: [ubuntu-latest] #, macos-latest]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     needs: [build-final-nqcc, build-partial-nqcc]
     steps:
