add CI check to run test suite against each commit

--- a/.github/workflows/test_tests.yaml
+++ b/.github/workflows/test_tests.yaml
@@ -5,7 +5,7 @@ name: Compiler Test Suite CI
 
 on:
   pull_request:
-    branches: [ "main", "complete-test-suite" ]
+    branches: [ "main" ]
 
   workflow_dispatch:
 
