--- a/.github/workflows/test_tests.yaml
+++ b/.github/workflows/test_tests.yaml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-22.04, ubuntu-24.04, macos-latest]
     uses: nlsandler/nqcc2/.github/workflows/build.yaml@main
     with:
       chapter: 20
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-22.04, ubuntu-24.04, macos-latest]
     uses: nlsandler/nqcc2/.github/workflows/build.yaml@main
     with:
       chapter: 19
