--- a/.github/workflows/test_tests.yaml
+++ b/.github/workflows/test_tests.yaml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-22.04, ubuntu-24.04, macos-latest]
     uses: nlsandler/nqcc2/.github/workflows/build.yaml@main
     with:
       chapter: 20
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-22.04, ubuntu-24.04, macos-latest]
     uses: nlsandler/nqcc2/.github/workflows/build.yaml@main
     with:
       chapter: 19
@@ -38,7 +38,7 @@ jobs:
       fail-fast: true
       matrix:
         python-version: ["3.8", "3.12"] #, "3.9", "3.10", "3.11"]
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-22.04, ubuntu-24.04, macos-latest]
     runs-on: ${{ matrix.os }}
     needs: [build-final-nqcc, build-partial-nqcc]
     steps:
@@ -107,4 +107,4 @@ jobs:
         # stop the build if there are errors
         pylint -E tests/test_framework
         # stop the build if there are type errors
-        mypy tests/test_framework
+        mypy tests/test_framework --strict
